--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -965,7 +965,7 @@ h6,
   font-size: 14px;
 }
 #pricing-table2-1w .mbr-plan-label {
-  color: #41a85f;
+  color: #c0a375;
 }
 #pricing-table2-1w .mbr-section__container .mbr-section-title {
   font-size: 32px;
