create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -783,7 +783,7 @@ h6,
 }
 #pricing-table2-1v .mbr-plan-price-desc SPAN {
   font-family: 'Bitter', serif;
-  color: #fac51c;
+  color: #cccccc;
 }
 #pricing-table2-1v .mbr-section__container .mbr-section-subtitle {
   font-family: 'Bitter', serif;
