--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -707,6 +707,7 @@ h6,
 
 
 
+
 #pricing-table2-1v .mbr-plan-header,
 #pricing-table2-1v .mbr-plan-body {
   background-color: #f4f4f4;
@@ -787,6 +788,16 @@ h6,
 }
 #pricing-table2-1v .mbr-section__container .mbr-section-subtitle {
   font-family: 'Bitter', serif;
+}
+#content1-96 DIV {
+  color: #28324e;
+  text-align: center;
+}
+#footer1-8e P {
+  color: #c0a375;
+  text-align: center;
+  font-family: 'Bitter', serif;
+  font-size: 12px;
 }
 
 
