--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -624,11 +624,11 @@ h6,
   color: #000000;
 }
 #content2-7v DIV {
-  text-align: center;
+  text-align: left;
 }
 #content2-7v P {
   color: #e25041;
-  text-align: center;
+  text-align: left;
 }
 #content1-7x P {
   text-align: center;
