create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1098,7 +1098,7 @@ h6,
 }
 #ext_menu-5a .link[aria-expanded="true"],
 #ext_menu-5a .dropdown-item[aria-expanded="true"] {
-  color: #ffffff!important;
+  color: #efefef!important;
 }
 #header3-2n .mbr-section-title,
 #header3-2n .mbr-section-subtitle {
@@ -1194,7 +1194,7 @@ h6,
 }
 #ext_menu-3a .link[aria-expanded="true"],
 #ext_menu-3a .dropdown-item[aria-expanded="true"] {
-  color: #000000!important;
+  color: #efefef!important;
 }
 #header3-3b .mbr-section-title,
 #header3-3b .mbr-section-subtitle {
@@ -1316,7 +1316,7 @@ h6,
 }
 #ext_menu-3q .link[aria-expanded="true"],
 #ext_menu-3q .dropdown-item[aria-expanded="true"] {
-  color: #000000!important;
+  color: #efefef!important;
 }
 #content1-3w P {
   color: #f28281;
@@ -1682,7 +1682,7 @@ h6,
 }
 #ext_menu-5a .link[aria-expanded="true"],
 #ext_menu-5a .dropdown-item[aria-expanded="true"] {
-  color: #000000!important;
+  color: #efefef!important;
 }
 #header3-5b .mbr-section-title,
 #header3-5b .mbr-section-subtitle {
@@ -1845,7 +1845,7 @@ h6,
 }
 #ext_menu-64 .link[aria-expanded="true"],
 #ext_menu-64 .dropdown-item[aria-expanded="true"] {
-  color: #ffffff!important;
+  color: #efefef!important;
 }
 #content1-65 P {
   color: #f28281;
@@ -2503,7 +2503,7 @@ h6,
 }
 #ext_menu-87 .link[aria-expanded="true"],
 #ext_menu-87 .dropdown-item[aria-expanded="true"] {
-  color: #ffffff!important;
+  color: #efefef!important;
 }
 #header3-88 .mbr-section-title,
 #header3-88 .mbr-section-subtitle {
