--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -14,6 +14,8 @@
 @import url(https://fonts.googleapis.com/css?family=Oxygen:400,300,700);
 @import url(https://fonts.googleapis.com/css?family=Arimo:400,700);
 @import url(https://fonts.googleapis.com/css?family=Lato:400,300,700);
+@import url(https://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700);
+@import url(https://fonts.googleapis.com/css?family=PT+Sans:400,700);
 
 
 
@@ -115,7 +117,7 @@ h6,
   background-color: #7e9b9f !important;
 }
 .bg-danger {
-  background-color: #28324e !important;
+  background-color: #faaf40 !important;
 }
 .btn-primary {
   background-color: #efefef;
@@ -218,8 +220,8 @@ h6,
   border-color: #597478 !important;
 }
 .btn-danger {
-  background-color: #28324e;
-  border-color: #28324e;
+  background-color: #faaf40;
+  border-color: #faaf40;
   color: #ffffff;
 }
 .btn-danger:hover,
@@ -228,14 +230,14 @@ h6,
 .btn-danger:active,
 .btn-danger.active {
   color: #ffffff;
-  background-color: #0e121b;
-  border-color: #0e121b;
+  background-color: #e78d06;
+  border-color: #e78d06;
 }
 .btn-danger.disabled,
 .btn-danger:disabled {
   color: #ffffff !important;
-  background-color: #0e121b !important;
-  border-color: #0e121b !important;
+  background-color: #e78d06 !important;
+  border-color: #e78d06 !important;
 }
 .btn-primary-outline {
   background: none;
@@ -339,8 +341,8 @@ h6,
 }
 .btn-danger-outline {
   background: none;
-  border-color: #05070b;
-  color: #05070b;
+  border-color: #cf7d05;
+  color: #cf7d05;
 }
 .btn-danger-outline:hover,
 .btn-danger-outline:focus,
@@ -348,14 +350,14 @@ h6,
 .btn-danger-outline:active,
 .btn-danger-outline.active {
   color: #ffffff;
-  background-color: #28324e;
-  border-color: #28324e;
+  background-color: #faaf40;
+  border-color: #faaf40;
 }
 .btn-danger-outline.disabled,
 .btn-danger-outline:disabled {
   color: #ffffff !important;
-  background-color: #28324e !important;
-  border-color: #28324e !important;
+  background-color: #faaf40 !important;
+  border-color: #faaf40 !important;
 }
 .text-primary {
   color: #efefef !important;
@@ -370,7 +372,7 @@ h6,
   color: #7e9b9f !important;
 }
 .text-danger {
-  color: #28324e !important;
+  color: #faaf40 !important;
 }
 .alert-success {
   background-color: #a38f84;
@@ -382,7 +384,7 @@ h6,
   background-color: #7e9b9f;
 }
 .alert-danger {
-  background-color: #28324e;
+  background-color: #faaf40;
 }
 .btn-social {
   border-color: #efefef;
@@ -430,7 +432,7 @@ h6,
 }
 .mbr-plan-header.bg-danger .mbr-plan-subtitle,
 .mbr-plan-header.bg-danger .mbr-plan-price-desc {
-  color: #94a1c8;
+  color: #ffffff;
 }
 .mbr-small-footer a,
 .mbr-gallery-filter li:hover {
@@ -2756,4 +2758,111 @@ h6,
   font-family: 'Arimo', sans-serif;
   font-size: 14px;
   text-align: left;
+}
+
+
+
+
+
+
+#ext_menu-9e .hide-buttons .nav-btn {
+  display: none !important;
+}
+#ext_menu-9e .navbar-caption {
+  color: #ffffff;
+}
+#ext_menu-9e .navbar-toggler {
+  color: #ffffff;
+}
+#ext_menu-9e .close-icon::before,
+#ext_menu-9e .close-icon::after {
+  background-color: #ffffff;
+}
+#ext_menu-9e .link,
+#ext_menu-9e .dropdown-item {
+  color: #ffffff;
+  font-family: 'Roboto', sans-serif;
+}
+#ext_menu-9e .link {
+  font-size: 1.05rem;
+}
+#ext_menu-9e .dropdown-item,
+#ext_menu-9e .nav-dropdown-sm .link {
+  font-size: 1.137rem;
+}
+#ext_menu-9e .link:hover,
+#ext_menu-9e .dropdown-item:hover,
+#ext_menu-9e .link:focus,
+#ext_menu-9e .dropdown-item:focus {
+  color: #efefef;
+}
+#ext_menu-9e .link[aria-expanded="true"],
+#ext_menu-9e .dropdown-menu {
+  background: #0e0e0e;
+}
+#ext_menu-9e .nav-dropdown-sm .link:focus,
+#ext_menu-9e .nav-dropdown-sm .link:hover,
+#ext_menu-9e .nav-dropdown-sm .dropdown-item:focus,
+#ext_menu-9e .nav-dropdown-sm .dropdown-item:hover {
+  background: #202020!important;
+}
+#ext_menu-9e .navbar,
+#ext_menu-9e .nav-dropdown-sm,
+#ext_menu-9e .nav-dropdown-sm .link[aria-expanded="true"],
+#ext_menu-9e .nav-dropdown-sm .dropdown-menu {
+  background: #282828;
+}
+#ext_menu-9e .bg-color.transparent .link {
+  color: #ffffff;
+  transition: none;
+}
+#ext_menu-9e .bg-color.transparent.opened .link {
+  transition: color 0.2s ease-in-out;
+}
+#ext_menu-9e .bg-color.transparent.opened .link:hover,
+#ext_menu-9e .bg-color.transparent.opened .link:focus {
+  color: #efefef;
+}
+#ext_menu-9e .link[aria-expanded="true"],
+#ext_menu-9e .dropdown-item[aria-expanded="true"] {
+  color: #efefef!important;
+}
+#header3-9s .mbr-section-title,
+#header3-9s .mbr-section-subtitle {
+  text-align: center;
+}
+#msg-box5-9w DIV {
+  font-family: 'Slabo 27px', serif;
+  font-size: 24px;
+  text-align: center;
+}
+#msg-box5-9w H3 {
+  font-family: 'Slabo 27px', serif;
+  font-size: 24px;
+  text-align: center;
+}
+#msg-box5-9w P {
+  font-size: 13px;
+  color: #f28281;
+  font-family: 'PT Sans Narrow', sans-serif;
+}
+#content1-9u P {
+  text-align: center;
+  font-family: 'PT Sans', sans-serif;
+  font-size: 13px;
+}
+#contacts1-9n STRONG {
+  color: #28262b;
+}
+#contacts1-9n B {
+  color: #28262b;
+}
+#contacts1-9n P {
+  color: #efefef;
+}
+#footer1-9o P {
+  color: #c0a375;
+  text-align: center;
+  font-family: 'Bitter', serif;
+  font-size: 12px;
 }
