create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -633,9 +633,9 @@ h6,
 }
 #content1-7x P {
   text-align: center;
-  color: #d14841;
+  color: #847272;
   font-family: 'Merriweather', serif;
-  font-size: 11px;
+  font-size: 12px;
 }
 
 #header3-3j .mbr-section-title,
