--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1,15 +1,17 @@
-@import url(https://fonts.googleapis.com/css?family=Roboto:400,300,700);
-@import url(https://fonts.googleapis.com/css?family=Oswald:400,300,700);
+@import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,300,700);
+@import url(https://fonts.googleapis.com/css?family=PT+Sans:400,700);
 @import url(https://fonts.googleapis.com/css?family=Slabo+27px);
-@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300,700);
+@import url(https://fonts.googleapis.com/css?family=Lora:400,700);
 @import url(https://fonts.googleapis.com/css?family=Bitter:400,700);
 @import url(https://fonts.googleapis.com/css?family=Montserrat:400,700);
 @import url(https://fonts.googleapis.com/css?family=Roboto+Condensed:400,300,700);
+@import url(https://fonts.googleapis.com/css?family=Roboto:400,300,700);
 @import url(https://fonts.googleapis.com/css?family=Droid+Serif:400,700);
 @import url(https://fonts.googleapis.com/css?family=Merriweather:400,300,700);
 @import url(https://fonts.googleapis.com/css?family=Roboto+Slab:400,300,700);
-@import url(https://fonts.googleapis.com/css?family=Lora:400,700);
+@import url(https://fonts.googleapis.com/css?family=Oswald:400,300,700);
 @import url(https://fonts.googleapis.com/css?family=PT+Serif:400,400i,700,700i);
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300,700);
 @import url(https://fonts.googleapis.com/css?family=Raleway:400,300,700);
 @import url(https://fonts.googleapis.com/css?family=Oxygen:400,300,700);
 @import url(https://fonts.googleapis.com/css?family=Arimo:400,700);
@@ -115,7 +117,7 @@ h6,
   background-color: #7e9b9f !important;
 }
 .bg-danger {
-  background-color: #faaf40 !important;
+  background-color: #cccccc !important;
 }
 .btn-primary {
   background-color: #efefef;
@@ -138,8 +140,8 @@ h6,
   border-color: #c9c9c9 !important;
 }
 .btn-secondary {
-  background-color: #cccccc;
-  border-color: #cccccc;
+  background-color: #28324e;
+  border-color: #28324e;
   color: #ffffff;
 }
 .btn-secondary:hover,
@@ -148,14 +150,14 @@ h6,
 .btn-secondary:active,
 .btn-secondary.active {
   color: #ffffff;
-  background-color: #a6a6a6;
-  border-color: #a6a6a6;
+  background-color: #0e121b;
+  border-color: #0e121b;
 }
 .btn-secondary.disabled,
 .btn-secondary:disabled {
   color: #ffffff !important;
-  background-color: #a6a6a6 !important;
-  border-color: #a6a6a6 !important;
+  background-color: #0e121b !important;
+  border-color: #0e121b !important;
 }
 .btn-info {
   background-color: #f1aaa7;
@@ -218,8 +220,8 @@ h6,
   border-color: #597478 !important;
 }
 .btn-danger {
-  background-color: #faaf40;
-  border-color: #faaf40;
+  background-color: #cccccc;
+  border-color: #cccccc;
   color: #ffffff;
 }
 .btn-danger:hover,
@@ -228,14 +230,14 @@ h6,
 .btn-danger:active,
 .btn-danger.active {
   color: #ffffff;
-  background-color: #e78d06;
-  border-color: #e78d06;
+  background-color: #a6a6a6;
+  border-color: #a6a6a6;
 }
 .btn-danger.disabled,
 .btn-danger:disabled {
   color: #ffffff !important;
-  background-color: #e78d06 !important;
-  border-color: #e78d06 !important;
+  background-color: #a6a6a6 !important;
+  border-color: #a6a6a6 !important;
 }
 .btn-primary-outline {
   background: none;
@@ -259,8 +261,8 @@ h6,
 }
 .btn-secondary-outline {
   background: none;
-  border-color: #999999;
-  color: #999999;
+  border-color: #05070b;
+  color: #05070b;
 }
 .btn-secondary-outline:hover,
 .btn-secondary-outline:focus,
@@ -268,14 +270,14 @@ h6,
 .btn-secondary-outline:active,
 .btn-secondary-outline.active {
   color: #ffffff;
-  background-color: #cccccc;
-  border-color: #cccccc;
+  background-color: #28324e;
+  border-color: #28324e;
 }
 .btn-secondary-outline.disabled,
 .btn-secondary-outline:disabled {
   color: #ffffff !important;
-  background-color: #cccccc !important;
-  border-color: #cccccc !important;
+  background-color: #28324e !important;
+  border-color: #28324e !important;
 }
 .btn-info-outline {
   background: none;
@@ -339,8 +341,8 @@ h6,
 }
 .btn-danger-outline {
   background: none;
-  border-color: #cf7d05;
-  color: #cf7d05;
+  border-color: #999999;
+  color: #999999;
 }
 .btn-danger-outline:hover,
 .btn-danger-outline:focus,
@@ -348,14 +350,14 @@ h6,
 .btn-danger-outline:active,
 .btn-danger-outline.active {
   color: #ffffff;
-  background-color: #faaf40;
-  border-color: #faaf40;
+  background-color: #cccccc;
+  border-color: #cccccc;
 }
 .btn-danger-outline.disabled,
 .btn-danger-outline:disabled {
   color: #ffffff !important;
-  background-color: #faaf40 !important;
-  border-color: #faaf40 !important;
+  background-color: #cccccc !important;
+  border-color: #cccccc !important;
 }
 .text-primary {
   color: #efefef !important;
@@ -370,7 +372,7 @@ h6,
   color: #7e9b9f !important;
 }
 .text-danger {
-  color: #faaf40 !important;
+  color: #cccccc !important;
 }
 .alert-success {
   background-color: #a38f84;
@@ -382,7 +384,7 @@ h6,
   background-color: #7e9b9f;
 }
 .alert-danger {
-  background-color: #faaf40;
+  background-color: #cccccc;
 }
 .btn-social {
   border-color: #efefef;
@@ -439,19 +441,14 @@ h6,
 .scrollToTop_wraper {
   opacity: 0 !important;
 }
-#header2-0 .mbr-section-title {
-  font-size: 46px;
-  font-family: 'Roboto', sans-serif;
-  text-align: center;
+#image1-a2 P {
+  font-family: 'Source Sans Pro', sans-serif;
 }
-#header2-0 .mbr-section-title SPAN {
-  color: #efefef;
-  font-size: 32px;
-  font-family: 'Oswald', sans-serif;
-}
-#header2-0 .mbr-section-text {
+#content1-a5 P {
+  font-family: 'PT Sans', sans-serif;
   text-align: center;
-  color: #efefef;
+  color: #cccccc;
+  font-size: 16px;
 }
 #features3-1 H4 {
   text-align: left;
@@ -461,14 +458,15 @@ h6,
 }
 #features3-1 DIV {
   text-align: left;
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Slabo 27px', serif;
   color: #ffffff;
+  font-size: 12px;
 }
 #features3-1 H5 {
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Lora', serif;
   text-align: left;
   color: #ffffff;
-  font-size: 14px;
+  font-size: 12px;
 }
 #features3-1 SPAN {
   color: #ffffff;
