create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2764,17 +2764,6 @@ h6,
 
 
 
-
-#msg-box4-al DIV {
-  font-family: 'Montserrat', sans-serif;
-  text-align: center;
-}
-#msg-box4-al H3 {
-  text-align: center;
-  font-size: 20px;
-  font-family: 'Raleway', sans-serif;
-  color: #232323;
-}
 #ext_menu-9e .hide-buttons .nav-btn {
   display: none !important;
 }
@@ -2836,6 +2825,15 @@ h6,
 #ext_menu-9e .link[aria-expanded="true"],
 #ext_menu-9e .dropdown-item[aria-expanded="true"] {
   color: #efefef!important;
+}
+#msg-box5-am DIV {
+  text-align: center;
+  font-family: 'Droid Serif', serif;
+  font-size: 22px;
+  color: #a38f84;
+}
+#msg-box5-am P {
+  text-align: center;
 }
 #content1-9u P {
   text-align: center;
